# steam-parser

./: LICENSE  README.md  docker-compose.yml  package.json
api/: .env.example  Dockerfile  LICENSE  index.js  package.json
api/controllers/: coefficientsController.js
api/database/: db.js  redisClient.js
api/routes/: coefficientsRoutes.js
api/services/: coefficientCalculator.js  coefficientsService.js
authService/: .env  Dockerfile  index.ts  package-lock.json  package.json
authService/controllers/: authController.ts
authService/core/repositories/: authRepository.ts
authService/core/services/: authService.ts
authService/infrastructure/config/: config.ts
authService/infrastructure/controllers/: authController.ts
authService/infrastructure/repositories/: authRepositoryImpl.ts
authService/infrastructure/routes/: authRoute.ts
authService/routes/: authRoute.ts
authService/services/: authService.ts
frontend/: .env.example  .gitignore  Dockerfile  nodemon.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  AppRouter.tsx  index.css
frontend/src/components/: interfaces.ts
nginx/: default.conf  nginx.conf
parser/: .env  .env.example  .gitignore  Dockerfile  app.py  config.py  database.py  proxies.txt  pyproject.toml  server.py
parser/steam_service/: __init__.py  fetch_item_nameid.py  fetch_order_data.py  fetch_price_history.py  fetch_rarity_quality_itemgroup.py  save_items_to_db.py  steam_item_service.py  utils.py
postgres/: .env  Dockerfile  create_tables.sql  init_db.sql  initdb.sql  migration.sql
(+30 files in other folders)
