[tool.poetry]
name = "steam_parser_server"
version = "0.1.0"
description = ""
authors = ["Aleksei Monakhov <lexmonakhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0"
selenium = "^4.0"
python-dotenv = "^0.19.1"
requests = "^2.26"
webdriver_manager = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

